[Platform] Added sorting functions (#49)